# mlb-markov

./: CLAUDE.md  PROJECT.md  README.md  package.json  pnpm-lock.yaml
docs/: index.html
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: client.rs  mod.rs  plays.rs  schedule.rs
src-tauri/src/commands/: data.rs  mod.rs  offense.rs  pitching.rs
src-tauri/src/db/: migrations.rs  mod.rs  schema.rs
src-tauri/src/markov/: entropy.rs  expected_runs.rs  mod.rs  pitch_seq.rs  states.rs  transitions.rs
src/lib/: api.ts  types.ts
src/lib/charts/: heatmap.ts
src/lib/components/: CountBreakdown.svelte  ExpectedRunsTable.svelte  InsightCallouts.svelte  MomentumTable.svelte  PitchMatrix.svelte  PitcherCard.svelte  RunComparisonTable.svelte  StateHeatmap.svelte  TeamSelector.svelte  Tex.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/learning/: +page.svelte
src/routes/offense/: +page.svelte
src/routes/pitching/: +page.svelte
