[package]
name = "mlb-markov"
version = "0.1.0"
description = "Markov chain models for MLB offense and pitching"
authors = ["Adam Wickwire"]
edition = "2021"

[lib]
name = "mlb_markov_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
